# claude-bridge

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  bot.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: ci.yml
app/: main.py
core/: config.py  logger.py
docs/: security-review.md
integrations/: claude_client.py  claude_context.py  claude_context_render.py  claude_history.py  claude_pricing.py  claude_transcript.py  claude_usage.py  claude_usage_agg.py  claude_usage_agg_render.py  claude_usage_render.py
launchd/: README.md  com.local.claude-bridge.plist  com.local.claude.cost-alert.plist
repositories/: session_repository.py
scripts/: cost_alert.py  install_cost_alert.sh  install_service.sh  run_cost_alert.sh  uninstall_cost_alert.sh  uninstall_service.sh
service/handlers/: __init__.py  _approvals.py  _common.py  approval.py  context.py  cwd.py  effort.py  export.py  history.py  message.py  model.py  session.py  start.py  usage.py
tests/: conftest.py  test_approvals.py  test_authorization.py  test_context.py  test_cost_alert.py  test_effort.py  test_extract_result.py  test_history.py  test_keepalive.py  test_model.py  test_paths.py  test_permission_denials.py  test_redact.py  test_state.py  test_usage.py  test_usage_agg.py
utils/: paths.py  redact.py
