[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-bridge"
version = "0.1.0"
description = "Telegram -> Claude Code bridge (macOS launchd service)"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0",
]

[project.scripts]
claude-bridge = "app.main:main"

[tool.setuptools]
packages = [
    "app",
    "core",
    "utils",
    "repositories",
    "integrations",
    "service",
    "service.handlers",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
